[package]
name = "obs-std"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walkdir = "2.5.0"
regex = "1.10.4"
serde_yaml = "0.9.34"
serde_json = "1.0.117"
lazy_static = "1.4.0"
rayon = "1.10.0"
rand = "0.9.0-alpha.1"
const_panic = "0.2.8"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
enum_glob_use = "deny"
pedantic = "deny"
nursery = "deny"
unused_wrap = "deny"
