[package]
name = "obs-std"
version = "0.1.0"
edition = "2021"

[dependencies]
walkdir = "2.5.0"
regex = "1.10.4"
serde_yaml = "0.9.34"
lazy_static = "1.4.0"
rayon = { version = "1.10.0", optional = true }
rand = "0.9.0-alpha.1"
clap = { version = "4.5.6", features = ["derive"] }
clap_derive = { version = "4.0.0-rc.1" }
difference = "2.0.0"

[profile.release]
debug = true


#[features]
#parallel = ["dep:rayon"]

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
enum_glob_use = "deny"
pedantic = "deny"
nursery = "deny"
unused_wrap = "deny"
